# EutherBooks

./: .gitignore  README.md  TTS_BACKEND_PLAN.md  pyproject.toml
deploy/systemd/: eutherbooks-clean.service  eutherbooks-clean.timer  eutherbooks.service
eutherbooks/: api.py  config.py  extractors.py  ids.py  jobs.py  library.py  main.py  models.py  tts.py
models/: README.md
scripts/: clean_generated_audio.py  download_piper_assets.sh  prewarm_dots_preset_voices.py
tests/: test_api.py  test_extractors.py  test_jobs.py  test_library.py  test_preset_prewarm.py  test_tts.py
